# slite

./: CMakeLists.txt  Dockerfile  README.md  err.out  key.txt  problems.md  setup.sh  test.c  test.run
cgi-bin/: calculator.py  gmon.out  test.py
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  server  server,
docs/: RIO.pptx  http.pptx  http_parser.pptx
src/: http.c  http.h  main.c  makefile  request.c  request.h  server.c  server.h  threadpool.c  threadpool.h  util.c  util.h
static/: calc.html  index.html
test/: threadpool_test.c
